--- a/src/SMAUG_2018/mainwindow.ui
+++ b/src/SMAUG_2018/mainwindow.ui
@@ -158,39 +158,7 @@
      </font>
     </property>
     <layout class="QGridLayout" name="gridLayout">
-     <item row="2" column="2">
-      <widget class="QLabel" name="templbl">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">font-weight: bold</string>
-       </property>
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="2">
-      <widget class="QLabel" name="humlbl">
-       <property name="font">
-        <font>
-         <weight>75</weight>
-         <bold>true</bold>
-        </font>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">font-weight: bold</string>
-       </property>
-       <property name="text">
-        <string>0</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="5">
+     <item row="3" column="5">
       <widget class="QLabel" name="noiselbl">
        <property name="font">
         <font>
@@ -206,19 +174,7 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="1">
-      <widget class="QLabel" name="label_3">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Humidity [%] :&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
+     <item row="4" column="1">
       <widget class="QLabel" name="label_10">
        <property name="font">
         <font>
@@ -226,11 +182,11 @@
         </font>
        </property>
        <property name="text">
-        <string>PM 10 [mg/m³] : </string>
+        <string>PM 10 : </string>
        </property>
       </widget>
      </item>
-     <item row="2" column="4">
+     <item row="3" column="4">
       <widget class="QLabel" name="label_8">
        <property name="font">
         <font>
@@ -238,11 +194,11 @@
         </font>
        </property>
        <property name="text">
-        <string>Noise [db]: </string>
+        <string>Noise: </string>
        </property>
       </widget>
      </item>
-     <item row="1" column="4">
+     <item row="2" column="4">
       <widget class="QLabel" name="label_5">
        <property name="font">
         <font>
@@ -250,11 +206,11 @@
         </font>
        </property>
        <property name="text">
-        <string>Light Percentage [%]:</string>
+        <string>Light Percentage:</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="4" column="0">
       <spacer name="horizontalSpacer_5">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -267,7 +223,7 @@
        </property>
       </spacer>
      </item>
-     <item row="3" column="6">
+     <item row="4" column="6">
       <spacer name="horizontalSpacer_6">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -280,7 +236,7 @@
        </property>
       </spacer>
      </item>
-     <item row="1" column="5">
+     <item row="2" column="5">
       <widget class="QLabel" name="lightlbl">
        <property name="font">
         <font>
@@ -296,19 +252,7 @@
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QLabel" name="label_7">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string>Temperature [°C] : </string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="4">
+     <item row="4" column="4">
       <widget class="QLabel" name="label_12">
        <property name="font">
         <font>
@@ -316,11 +260,11 @@
         </font>
        </property>
        <property name="text">
-        <string>Air Pollution [PPM]: </string>
+        <string>Air Pollution: </string>
        </property>
       </widget>
      </item>
-     <item row="3" column="2">
+     <item row="4" column="2">
       <widget class="QLabel" name="pm2lbl">
        <property name="font">
         <font>
@@ -336,7 +280,7 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="5">
+     <item row="4" column="5">
       <widget class="QLabel" name="aqilbl">
        <property name="font">
         <font>
@@ -352,7 +296,7 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="QLabel" name="label_14">
        <property name="font">
         <font>
@@ -360,11 +304,11 @@
         </font>
        </property>
        <property name="text">
-        <string>PM 2.5 [mg/m³] :</string>
+        <string>PM 2.5:</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="2">
+     <item row="5" column="2">
       <widget class="QLabel" name="pm10lbl">
        <property name="font">
         <font>
@@ -393,7 +337,7 @@
        </property>
       </spacer>
      </item>
-     <item row="3" column="3">
+     <item row="4" column="3">
       <spacer name="horizontalSpacer_7">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
@@ -410,6 +354,62 @@
       <widget class="QLabel" name="label">
        <property name="text">
         <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLabel" name="label_3">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Humidity:&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="2">
+      <widget class="QLabel" name="humlbl">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font-weight: bold</string>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="2">
+      <widget class="QLabel" name="templbl">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font-weight: bold</string>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLabel" name="label_7">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Temperature: </string>
        </property>
       </widget>
      </item>
